--- a/host_vars/QEQ-ERT-02-RPi1.yml
+++ b/host_vars/QEQ-ERT-02-RPi1.yml
@@ -14,6 +14,12 @@ ssh_key_file: "/root/.ssh/{{inventory_hostname}}_sshkey"
 
 usb_mount_point: /media/usb
 
+ppp0_mtu: 1200    # SSH connection freezes up when long output is requested
+                  # this is handled by reducing the MTU by trial and error
+                  # 1200 seems to work well on DK network. What about Greenland?             
+                  # Can be tested from terminal by:
+                  # $ sudo ifconfig ppp0 mtu 1400
+
 # CURRENTLY DEFINED FOR ENTIRE GROUP OF HOSTS IN rpi_hosts.yml
 # wittypi_default_power_state: 1            # 1 = TURN ON; 0 = STAY OFF, when power is connected 
 # wittypi_low_voltage_threshold: 55         # threshold voltage * 10 (as integer)
