Moved installation of python3 to install_python_dependencies role

--- a/roles/install_python_dependencies/tasks/main.yml
+++ b/roles/install_python_dependencies/tasks/main.yml
@@ -3,6 +3,7 @@
   - name: Install packages relating to python
     ansible.builtin.apt:
       name: 
+        - python3
         - python3-dev
         - build-essential
         - libffi-dev
