Update installation procedure to install also ntpstat package and pytz python package

--- a/roles/configure_ntp/tasks/main.yml
+++ b/roles/configure_ntp/tasks/main.yml
@@ -6,7 +6,9 @@
 
   - name: Install the NTP daemon 
     ansible.builtin.apt:
-      name: ntp
+      name: 
+       - ntp
+       - ntpstat
       state: present
 
   - name: Set timezone variables
